chore: fix tag line-height and letter-spacing

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,10 +5,6 @@ $component: #{$prefix}-button;
 .#{$component} {
   @apply cursor-pointer font-bold outline-none transition duration-200 ease-linear;
 
-  & {
-    line-height: 1.5 !important;
-  }
-
   & + & {
     @apply ml-spacing_04;
   }
